Update component. Change header to paper-scroll-header-panel Fix layout on Mobile devices

--- a/style.css
+++ b/style.css
@@ -16,33 +16,9 @@
       @apply(--shadow-elevation-2dp);
     }
 
-    paper-tabs {
-      background-color: #1565C0;
-      color: #ffffff;
-      box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
-    }
-    
-    paper-tabs[noink][nobar] paper-tab.iron-selected {
-      color: #ffffff;
-    }
-    
-    paper-tabs.transparent-teal {
-      background-color: transparent;
-      color: #00bcd4;
-      box-shadow: none;
-    }
-    
-    paper-tabs.transparent-teal::shadow #selectionBar {
-      background-color: #00bcd4;
-    }
-    
-    paper-tabs.transparent-teal paper-tab::shadow #ink {
-      color: #00bcd4;
-    }
-
     .profile-picture {
-        width: 150px;
-        height: 150px;
+        width: 140px;
+        height: 140px;
         border-radius: 100px;
         -webkit-border-radius: 100px;
         -moz-border-radius: 100px;
@@ -64,62 +40,15 @@
         width: 100%;
         text-align:center;
         position:relative;
-    }
-
-    #scroll-animate
-    {
-      overflow: hidden;
-    }
-
-    #scroll-animate-main
-    {
-      width: 100%;
-      left: 0;
-      position: fixed;
-    }
-
-    #heightPage,
-    #heightScroll
-    {
-      width: 10px;
-      top: 0;
-      position: absolute;
-      z-index: 99;
-    }
-
-    #heightPage
-    {
-      left: 0;
-    }
-
-    #heightScroll
-    {
-      right: 0;
-    }
-
-    header
-    {
-      width: 100%;
-      height: 300px;
-      background: #29B6F6;
-      top: 0;
-      position: fixed;
-      z-index: -1;
+        float:left;
     }
 
     .content
     {
-      height: 500px;
-      min-height: 500px;  
+      height: 100vh;
       background: #ededed;
       position: relative;
-      z-index: 1;
-    }
-
-    .wrapper-parallax {
-      margin-top: 300px;
-      margin-bottom: 300px;
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+      z-index: 2;
     }
 
     h1{
@@ -131,22 +60,7 @@
       text-align: center;
       font-size: 25px;
       color: #B3E5FC;
-    }
-
-    header,
-    #scroll-animate-main
-    {
-      -webkit-transition-property: all;
-         -moz-transition-property: all;
-          transition-property: all;
-
-      -webkit-transition-duration: 0.1s;
-         -moz-transition-duration: 0.1s;
-          transition-duration: 0.1s;
-
-      -webkit-transition-timing-function: cubic-bezier(0, 0, 0, 1);
-         -moz-transition-timing-function: cubic-bezier(0, 0, 0, 1);
-          transition-timing-function: cubic-bezier(0, 0, 0, 1);
+      float:left;
     }
 
     .hvr-grow {
@@ -166,6 +80,43 @@
     .hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
       -webkit-transform: scale(1.1);
       transform: scale(1.1);
+    }
+
+
+    paper-scroll-header-panel {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: var(--paper-grey-200, #eee);
+      /* background for toolbar when it is at its full size */
+      --paper-scroll-header-panel-full-header: {
+        background-color: #29B6F6;
+      };
+      /* background for toolbar when it is condensed */
+      --paper-scroll-header-panel-condensed-header: {
+        background-color: var(--paper-deep-orange-500, #ff5722);
+      };
+    }
+
+    paper-toolbar.really-tall {
+      height: 250px;
+      background-color: #29B6F6;
+    }
+
+    paper-toolbar.tall .title {
+      font-size: 40px;
+      margin-left: 60px;
+      -webkit-transform-origin: left center;
+      transform-origin: left center;
+    }
+
+    .toolbar-content-container {
+        z-index: 0;
+        height: 250px;
+        width: 100%;
+        margin-top: 180px;
     }
 
 </style>
